Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextObjTextField.quorum
class Main
    text v = text
    action Main
        Test(v)
    end

    action Test(Text var)
        if var:GetValue() = text
            output "passed"
        end
    end
end
