Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue("text")
        Test(v)
    end

    action Test(integer var)
    end
end
